Upgrade project to JDK 11